# game-slop-machine

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  README.md  add_shelf.py  fix_bed.py  fix_books.py  fix_books2.py  fix_duplicates.py  fix_furniture.py  fix_knob_z.py  fix_shelf_z.py  house-goal.md  opencode.json  rebuild.py  restore.sh
apps/building-ascii/: Cargo.toml
apps/building-ascii/src/: main.rs
apps/game/: Cargo.toml
apps/game-headless/: Cargo.toml
apps/game-headless/src/: building_preview.rs  district_render.rs  fixtures.rs  furniture_preview.rs  main.rs  mesh_util.rs  screenshot.rs  texture_preview.rs
apps/game-inspector/: Cargo.toml
apps/game-inspector/src/: main.rs
apps/game-inspector/src/inspector/: camera_effects.rs  camera_presets.rs  consts.rs  control_panel.rs  despawn_ui.rs  global_light.rs  mod.rs  scene_selector.rs
apps/game-inspector/src/inspector/concrete_wall_material_scene/: controls.rs  material_settings.rs  mod.rs  progress.rs
apps/game-inspector/src/inspector/plaster_wall_material_scene/: controls.rs  material_settings.rs  mod.rs  progress.rs
apps/game-inspector/src/inspector/simple_scene/: camera_effects.rs  camera_presets.rs  global_light.rs  mod.rs
apps/game/src/: main.rs
crates/building-gen/: Cargo.toml
crates/building-gen/examples/: debug_test.rs
crates/building-gen/src/: bsp.rs  config.rs  geometry.rs  layout.rs  lib.rs  mesh.rs  opening.rs  random.rs  roof.rs  scene.rs  scenelet.rs  tile.rs  tile_converter.rs  zone_layout.rs
crates/building-gen/src/district/: buildings.rs  config.rs  layout.rs  mod.rs  placement.rs  road.rs
crates/building-gen/src/district/buildings/: config_apply.rs  footprint.rs  mod.rs  selection.rs
crates/building-gen/src/district/placement/: blocks.rs  collision.rs  connector.rs  lot_split.rs  mod.rs
crates/building-gen/src/furniture/: barrel.rs  bed.rs  bench.rs  catalog.rs  chair.rs  counter.rs  crate_mesh.rs  desk.rs  mesh_utils.rs  mod.rs  placement.rs  shelf.rs  stove.rs  table.rs
crates/building-gen/src/mesh/: colored_shapes.rs  floor.rs  foundation.rs  math_util.rs  mod.rs  opening.rs  primitives.rs  roof.rs  wall.rs
crates/building-gen/src/mesh/wall/: bounds.rs  boxes.rs  classify.rs  faces.rs  mod.rs
crates/building-gen/src/opening/: doorways.rs  entrance.rs  mod.rs  wall_query.rs  windows.rs
crates/building-gen/src/zone_layout/: axes.rs  corridor.rs  mod.rs  rows.rs  scoring.rs  splits.rs
crates/building-gen/tests/: proptest_building.proptest-regressions  proptest_building.rs
crates/game-core/: Cargo.toml
crates/game-core/src/: lib.rs
crates/game-core/src/plugins/: inspector_scene.rs  mod.rs  seed.rs
crates/game-core/src/plugins/building/: config.rs  mesh_util.rs  mod.rs  procedural_texture.rs  render.rs  spawner.rs
crates/game-core/src/plugins/building/procedural_texture/: brick.rs  builders.rs  concrete.rs  floor.rs  mod.rs  noise.rs  plaster.rs  road.rs  roof.rs  stone.rs  tests.rs  wood.rs
crates/game-core/src/plugins/district/: config.rs  mod.rs  spawner.rs
crates/game-core/src/plugins/game/: mod.rs
crates/game-core/src/plugins/global_camera/: camera.rs  mod.rs  preset.rs  scene_camera_settings.rs
crates/game-core/src/plugins/global_camera/presets/: default_game.rs  default_game_isometric_perspective.rs  default_game_perspective.rs  mod.rs  simple_preview.rs
crates/game-core/src/plugins/global_lighting/: light_controls.rs  mod.rs  preset.rs  scene_lighting_settings.rs  sun.rs
crates/game-core/src/plugins/global_lighting/presets/: default_game.rs  mod.rs  simple_preview.rs
crates/game-core/src/plugins/inspector/: editable_params.rs  mod.rs  state.rs
crates/game-core/src/plugins/inspector/concrete_wall_material_scene/: camera.rs  geometry.rs  lighting.rs  material.rs  mod.rs  plugin.rs  root.rs  scene_sets.rs
crates/game-core/src/plugins/inspector/material_scene/: mod.rs  poll_system.rs  resources.rs  settings_system.rs  spec.rs  tasks.rs
crates/game-core/src/plugins/inspector/plaster_wall_material_scene/: camera.rs  geometry.rs  lighting.rs  material.rs  mod.rs  plugin.rs  root.rs  scene_sets.rs
crates/game-core/src/plugins/inspector/simple_scene/: box_motion.rs  boxes.rs  camera.rs  geometry.rs  lighting.rs  mod.rs  plugin.rs  root.rs  scene_sets.rs
crates/game-core/src/plugins/inspector/wall_material/: image_convert.rs  mod.rs  settings.rs
crates/game-core/src/plugins/scene/: camera.rs  camera_config.rs  light.rs  mod.rs  objects.rs  scene_config.rs
crates/game-core/src/plugins/simple_scene/: boxes.rs  camera.rs  geometry.rs  lighting.rs  mod.rs  plugin.rs  root.rs  scene_sets.rs  state.rs
crates/material-preview-geometry/: Cargo.toml
crates/material-preview-geometry/src/: lib.rs
crates/texture-gen/: Cargo.toml
crates/texture-gen-derive/: Cargo.toml
crates/texture-gen-derive/src/: lib.rs  sliders.rs
crates/texture-gen/src/: builders.rs  common.rs  lib.rs  mip.rs  noise.rs
crates/texture-gen/src/concrete/: mod.rs  params.rs  tests.rs
crates/texture-gen/src/concrete/generate/: channels.rs  layers.rs  maps.rs  mod.rs  stage.rs  texture_set.rs
crates/texture-gen/src/material/: mod.rs  texture_set.rs  trait_def.rs
crates/texture-gen/src/plaster/: generate.rs  mod.rs  params.rs  tests.rs
crates/texture-gen/src/plaster/generate/: channels.rs  layers.rs  maps.rs  math.rs  mod.rs  rng.rs  stage.rs  texture_set.rs  tile_noise.rs
crates/texture-gen/src/surface/: math.rs  mod.rs  normal.rs  rng.rs  tile_noise.rs
crates/texture-gen/src/texture/: constants.rs  generated.rs  mod.rs  size.rs
crates/ui-derive/: Cargo.toml
crates/ui-derive/src/: lib.rs  sliders.rs
crates/ui-derive/src/controls/: checkbox.rs  combined.rs  mod.rs  parse.rs  slider.rs
crates/ui-schema/: Cargo.toml
crates/ui-schema/src/: control.rs  id.rs  lib.rs  schema.rs
src/: main.rs
src/plugins/scene/: components.rs  mod.rs  systems.rs
