[workspace]
members = ["apps/*", "crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
bevy = { version = "0.18.1", features = ["experimental_pbr_pcss"] }
game-core = { path = "crates/game-core" }

[profile.dev]
debug = 0
strip = "debuginfo"
opt-level = 0

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
panic = 'abort'
debug = 0
strip = "debuginfo"
