[package]
name = "game-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
description = "Reusable Bevy plugins and game systems for Game Slop Machine."
readme = "../../README.md"

[dependencies]
bevy.workspace = true

[lints]
workspace = true
