[package]
name = "material-preview-geometry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
description = "Reusable Bevy preview geometry for material inspection."
readme = "../../README.md"

[dependencies]
bevy.workspace = true

[lints]
workspace = true
