[package]
name = "texture-gen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
description = "Pure procedural texture generation for Game Slop Machine."
readme = "../../README.md"

[dependencies]
num-traits = "0.2.19"

[lints]
workspace = true
