[package]
name = "ui-schema"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
description = "UI-agnostic control schemas for Game Slop Machine."
readme = "../../README.md"

[dependencies]

[lints]
workspace = true
